--- a/src/app/chatbox/messagelist/messagelist.component.html
+++ b/src/app/chatbox/messagelist/messagelist.component.html
@@ -1,6 +1,6 @@
 <ul>
     <li class="text" *ngFor="let mess of messageList">
-        <span *ngIf="mess.message">{{mess.from}} : {{ mess.message }}</span>
+        <span *ngIf="mess.message">{{mess.from}} : {{ mess.message }} - {{mess.status}}</span>
         <span *ngIf="mess.isTyping && mess.from != ('user'+userId) "><img src="../../../assets/preloader.gif"
                                                                           alt=""></span>
     </li>
